fix: width calculate on mobile breakpoint

--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   min-width: 320px;
   max-width: 880px;
+  width: calc((100vw - 424px) / (1280 - 424) * (880 - 424) + 424px - 27px * 2);
   background: black;
   color: white;
 
@@ -16,4 +17,10 @@
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
+}
+
+@media (max-width: 424px) {
+  .root {
+    width: 100%;
+  }
 }
